# mpi_pastar_msa

./: .gitignore  Alinhamento múltiplo de sequências com clusters MPI.pptx  Makefile  README.md  mpi_pastar_msa.cbp  mpi_pastar_msa.layout  mpi_pastar_msa2.cbp  mpi_pastar_msa2.layout  pastar.docx  pastar.sln  test.fasta  test2.fasta
git.bak/: HEAD  index
pastar/: .Node.cpp.swp  AStar.cpp  BlockPruner.cpp  CMakeLists.txt  Coord.cpp  Coord.h  CoordHash.cpp  CoordHash.h  Cost.cpp  HeuristicHPair.cpp  Node.cpp  Node.cpp.save  Node.h  PAStar (cópia).cpp  PAStar.cpp  PAStar.h  PAStarReceiver.cpp  PairAlign.cpp  ReadMe.txt  Sequences.cpp  TimeCounter.cpp  TimeCounter.h  WeightedSP.cpp  backtrace.cpp  backtrace.h  lz4sup.cpp  msa_astar_main.cpp  msa_options.cpp  msa_pastar_main.cpp  packages.config  pastar.cpp  pastar.cpp.save-failed  pastar.vcxproj  pastar.vcxproj.filters  read_fasta.cpp  read_fasta.h
pastar/My Inspector XE Results - pastar/: My Inspector XE Results - pastar.inspxeproj
pastar/My Inspector XE Results - pastar/r000mi3-bad-bad/: inspxe-runmc.txt  r000mi3-bad-bad.inspxe
pastar/My Inspector XE Results - pastar/r000mi3-bad-bad/config/: collection.cfg  context_values.cfg  runmc.options
pastar/include/: BlockPruner.hpp  CoordHash.h  Cost.h  HeuristicHPair.h  Node.h  PAStar.h  PriorityList.h  Sequences.h  WeightedSP.hpp  backtrace.h  lz4sup.h  mpi_dependencies.h
pastar/pastar_functions/: CMakeLists.txt  PAStarBlockPruner.cpp  PAStarDistributedBacktrace.cpp  PAStarMessageProcesser.cpp  PAStarReceiver.cpp  PAStarSender.cpp  PAStarSyncData.cpp
(+11 files in other folders)
